# clara-cpp

./: .dockerignore  .editorconfig  .mailmap  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  configure
.github/workflows/: build.yaml
.reuse/: dep5
.travis/: install.sh
LICENSES/: BSD-2-Clause-Views.txt  BSD-2-Clause.txt
cmake/: clara-config.cmake.in  clara.pc.in  cmake_uninstall.cmake.in  xmsg-config.cmake.in  xmsg.pc.in
cmake/Modules/: EnsureProtobufTarget.cmake  FindZeroMQ.cmake  Findxmsg.cmake
doc/: CMakeLists.txt  Doxyfile.in  get_cppreference_tags.cmake  mainpage.dox
docker/: Dockerfile
include/clara/: any.hpp  engine.hpp  engine_data.hpp  engine_data_type.hpp  engine_status.hpp  serializer.hpp
include/clara/msg/: actor.hpp  address.hpp  connection.hpp  connection_pool.hpp  connection_setup.hpp  constants.hpp  context.hpp  message.hpp  mimetype.hpp  proxy.hpp  subscription.hpp  topic.hpp  utils.hpp
include/clara/msg/proto/: data.hpp  meta.hpp  registration.hpp
include/clara/stdlib/: event_reader_service.hpp  event_writer_service.hpp  json_utils.hpp  streaming_service.hpp
scripts/unix/: c_dpe
src/: CMakeLists.txt  TriDASService.cpp  TriDASService.hpp  base.cpp  base.hpp  component.cpp  component.hpp  composition.cpp  composition.hpp  composition_parser.hpp  concurrent_map.hpp  concurrent_utils.hpp  condition.cpp  condition.hpp  constants.hpp  container.cpp  container.hpp  container_report.cpp  container_report.hpp  data_utils.cpp  data_utils.hpp  dpe.cpp  dpe.hpp  dpe_config.hpp  dpe_options.hpp  dpe_report.cpp  dpe_report.hpp  engine_data.cpp  engine_data_helper.hpp  engine_data_type.cpp  instruction.cpp  instruction.hpp  json_report.cpp  json_report.hpp  json_utils.hpp  logging.hpp  run_dpe.cpp  service.cpp  service.hpp  service_config.hpp  (+11 more)
src/msg/: CMakeLists.txt  actor.cpp  address.cpp  connection_driver.cpp  connection_driver.hpp  connection_pool.cpp  connection_setup.cpp  constants.hpp  context.cpp  likely.hpp  proxy.cpp  registration_driver.cpp  registration_driver.hpp  subscription.cpp  thread_local.hpp  topic.cpp  utils.cpp  zhelper.cpp  zhelper.hpp
src/msg/proto/: CMakeLists.txt  data.proto  meta.proto  registration.proto
src/msg/sys/: CMakeLists.txt  proxy.cpp
src/stdlib/: event_reader_service.cpp  event_writer_service.cpp  json11_utils.cpp  json11_utils.hpp  json_utils.cpp  service_utils.hpp  streaming_service.cpp
src/xmsg/: CMakeLists.txt  address.cpp  connection_driver.cpp  connection_driver.h  connection_pool.cpp  connection_setup.cpp  context.cpp  likely.h  proxy.cpp  registration_driver.cpp  registration_driver.h  subscription.cpp  thread_local.h  topic.cpp  util.cpp  xmsg.cpp  zhelper.cpp  zhelper.h
src/xmsg/proto/: CMakeLists.txt
src/xmsg/sys/: CMakeLists.txt  cx_proxy.cpp
test/: CMakeLists.txt  composition_compiler_simple_test.cpp  composition_compiler_test.cpp  data_utils_test.cpp  engine_data_test.cpp  engine_data_type_test.cpp  service_loader_test.cpp  utils_test.cpp
test/msg/: CMakeLists.txt  addr_resolution_test.cpp  connection_pool_test.cpp  context_test.cpp  message_test.cpp  regdis_test.cpp  registrar_test.cpp  subscription_test.cpp  topic_test.cpp  utils_test.cpp  zhelper_test.cpp
test/msg/helper/: proxy_wrapper.hpp  registration.hpp  utils.hpp
test/msg/perf/: CMakeLists.txt  README  local_thr.cpp  remote_thr.cpp
test/xmsg/: CMakeLists.txt  addr_resolution_test.cpp  connection_pool_test.cpp  context_test.cpp  message_test.cpp  regdis_test.cpp  registrar_test.cpp  subscription_test.cpp  topic_test.cpp  util_test.cpp  zhelper_test.cpp
test/xmsg/helper/: proxy_wrapper.h  registration.h  utils.h
test/xmsg/perf/: README  local_thr.cpp  remote_thr.cpp
